Finished base REST service Started html temlate